# ESP32_Cam-ESP-IDF

./: README.md  partitions.csv  sdkconfig
components/drawfont/: CMakeLists.txt  SmallFont.h  drawfont.c
libs/espCLIENT/: CMakeLists.txt  espCLIENT.c  espCLIENT.h
libs/espFILE/: CMakeLists.txt  espFILE.c  espFILE.h
libs/espHTTP/: CMakeLists.txt  espHTTP.c  espHTTP.h
libs/espMQTT/: CMakeLists.txt  espMQTT.c  espMQTT.h
libs/espWiFi/: CMakeLists.txt  espWiFi.c  espWiFi.h
main/: Kconfig.projbuild  main.c
spiffs_data/: app.js  index.html
